--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title"><i class="bi bi-bank"></i> Education</h3>
             <div class="resume-item">
               <h4>國立清華大學語言學研究所博士</h4>
               <h6>Ph.D., Linguistics</h6>
@@ -163,7 +163,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Oversea</h3>
+            <h3 class="resume-title"><i class="bi bi-globe-americas"></i> Oversea</h3>
 
             <div class="resume-item pb-0">
               <h4>美國夏威夷大學語言學系 | 訪問學人</h4>
@@ -176,7 +176,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Academic Awards</h3>
+            <h3 class="resume-title"><i class="bi bi-award"></i> Academic Awards</h3>
             <div class="resume-item pb-0">
               <h4>國立勤益科技大學推動研究發展績效獎</h4>
               <p><em>[English]</em></p>
@@ -198,7 +198,7 @@
               <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> International Honor Ambassador, Office of International Affairs, Providence University (2008)</li></ul>
             </div>
 
-            <h3 class="resume-title">Licenses & Certificates</h3>
+            <h3 class="resume-title"><i class="bi bi-credit-card-2-front"></i> Licenses & Certificates</h3>
             <div class="resume-item pb-0">
               <h4><span style="text-transform: none">Teaching Knowledge Test</span> 劍橋英語教師認證</h4>
               <h6>TKT Module 2 | Band 2 Cambridge English</h6>
@@ -232,7 +232,7 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Work</h3>
+            <h3 class="resume-title"><i class="bi bi-person-workspace"></i> Work</h3>
             <div class="resume-item">
               <h4>國立勤益科技大學應用英語系 | 助理教授</h4>
               <h5>2022 - Present</h5>
@@ -323,7 +323,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
               <h4 class="title"><a href="publication-details.html" class="stretched-link">學術發表</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
@@ -331,7 +331,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-people-fill"></i></div>
             <div>
               <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
@@ -339,7 +339,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a href="project-details.html" class="stretched-link">研究計畫</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
@@ -347,7 +347,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
               <h4 class="title"><a href="cooperation-details.html" class="stretched-link">產學合作</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
@@ -355,7 +355,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
             <div>
               <h4 class="title"><a href="teaching-details.html" class="stretched-link">教學經歷</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
