--- a/project-details.html
+++ b/project-details.html
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3>研究計畫 Research Projects</h3>
+            <h3><i class="bi bi-card-checklist"></i> 研究計畫 Research Projects</h3>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span>113年度教育部教學實踐研究計畫【GIS故事地圖與中英翻譯課程之跨域應用】(2024-2025) | 教育部 (PED1137365)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第一期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0】(2023-2025) | 教育部 (MOE-112-1-C-005)</span></li>
