--- a/publication-details.html
+++ b/publication-details.html
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3>學術發表 Acdamic Publications</h3>
+            <h3><i class="bi bi-book"></i> 學術發表 Acdamic Publications</h3>
             <hr>
             <h5>
               期刊論文 Journal Articles
