--- a/teaching-details.html
+++ b/teaching-details.html
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3>教學經歷 Teaching Experiences</h3>
+            <h3><i class="bi bi-chat-left-dots"></i> 教學經歷 Teaching Experiences</h3>
             <ul>
               <li><i class="bi bi-caret-right"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
               <li><i class="bi bi-caret-right"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
