--- a/paticipation-details.html
+++ b/paticipation-details.html
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3><i class="bi bi-people-fill"></i> 學術參與 Acdamic Participation</h3>
+            <h3><i class="bi bi-people"></i> 學術參與 Acdamic Participation</h3>
             <hr>
             <h5>
               委員擔任
