--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="/#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="/#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
-        <li><a href="/#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
-        <li><a href="/#guides"><i class="bi bi-images navicon"></i> Guides</a></li>
-        <li><a href="/#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
+        <li><a href="#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
+        <li><a href="#guides"><i class="bi bi-images navicon"></i> Guides</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
   </header>
