Fix bugs for current content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#experiences"><i class="bi bi-file-earmark-text navicon"></i> Experiences</a></li>
         <li><a href="#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
