Revise format for guides

--- a/guide-details.html
+++ b/guide-details.html
@@ -131,12 +131,12 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>全國人文社會永續行動創新應用競賽</h3>
               <ul>
-                <li><strong>📅 團隊拍攝日期</strong>: 2024.11.13</li>
-                <li><strong>🏫 團隊學校名稱</strong>: 國立勤益科技大學</li>
-                <li><strong>👨‍🏫 團隊指導老師</strong>: 楊真宜 助理教授</li>
-                <li><strong>👥 團隊成員</strong>: 許哲綸、鄭宇廷、齊又頡、黃鈞緯</li>
-                <li><strong>🏆 競賽結果</strong>: <strong>✨ <a href="#">指導獲選優勝</a> ✨</strong></li>
-                <li><strong>🔗 影片網址</strong>: <a href="https://www.facebook.com/61550050917478/videos/554243197204450" target="_blank">CLICK HERE</a></li>
+                <li><strong>📅 拍攝日期</strong>：2024.11.13</li>
+                <li><strong>🏫 學校名稱</strong>：國立勤益科技大學</li>
+                <li><strong>👨‍🏫 指導老師</strong>：<strong><a href="#">楊真宜</a></strong> 助理教授</li>
+                <li><strong>👥 團隊成員</strong>：許哲綸、鄭宇廷、齊又頡、黃鈞緯</li>
+                <li><strong>🏆 競賽結果</strong>：✨ <strong><a href="#">指導獲選優勝</a></strong> ✨</li>
+                <li><strong>🔗 影片網址</strong>：📹 <a href="https://www.facebook.com/61550050917478/videos/554243197204450" target="_blank">CLICK HERE</a> 📹</li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
