Revise format for guides

--- a/guide-details.html
+++ b/guide-details.html
@@ -135,7 +135,7 @@
                 <li><strong>🏫 學校名稱</strong>：國立勤益科技大學</li>
                 <li><strong>👨‍🏫 指導老師</strong>：<strong><a href="#">楊真宜</a></strong> 助理教授</li>
                 <li><strong>👥 團隊成員</strong>：許哲綸、鄭宇廷、齊又頡、黃鈞緯</li>
-                <li><strong>🏆 競賽結果</strong>：✨ <strong><a href="#">指導獲選優勝</a></strong> ✨</li>
+                <li><strong>🏆 競賽結果</strong>：✨ <strong><a href="#">獲選優勝</a></strong> ✨</li>
                 <li><strong>🔗 影片網址</strong>：📹 <a href="https://www.facebook.com/61550050917478/videos/554243197204450" target="_blank">CLICK HERE</a> 📹</li>
               </ul>
             </div>
