--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
                 <img src="assets/img/portfolio/guide-01.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>競賽指導</h4>
-                  <p>《全國人文社會永續行動創新應用競賽》- 指導獲選優勝</p>
-                  <a href="assets/img/portfolio/guide-01.png" title="楊真宜老師《全國人文社會永續行動創新應用競賽》指導獲選優勝" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <p>《全國人文社會永續行動創新應用競賽》✨ 獲選優勝 ✨</p>
+                  <a href="assets/img/portfolio/guide-01.png" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="guide-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
