Add new content for projects

--- a/index.html
+++ b/index.html
@@ -238,7 +238,37 @@
               <h5>2022 - Present</h5>
               <p><em>Assistant Professor, Department of Applied English, National Chin-Yi University of Technology, Taichung, Taiwan.</em></p>
               <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> (TBD)</li>
+                <li><i class="bi bi-briefcase"></i> 113年度教育部教學實踐研究計畫</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> GIS故事地圖與中英翻譯課程之跨域應用</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：PED1137365</li>
+                  </ul>
+                </li>
+
+                <li><i class="bi bi-briefcase"></i> 教育部人文社會與產業實務創新鏈結計畫 第二期</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-114-1-C-008</li>
+                  </ul>
+                </li>
+
+                <li><i class="bi bi-briefcase"></i> 教育部人文社會與產業實務創新鏈結計畫 第一期</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-112-1-C-005</li>
+                  </ul>
+                </li>
+
+                <li><i class="bi bi-briefcase"></i> 教育部人文社會與產業實務創新鏈結計畫 第零期</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-112-C-022</li>
+                  </ul>
+                </li>
               </ul>
             </div>
 
