Revise for counters

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <li><a href="#achievements"><i class="bi bi-hdd-stack navicon"></i> Achievements</a></li>
         <li><a href="#guides"><i class="bi bi-images navicon"></i> Guides</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
   </header>
@@ -131,7 +132,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>經歷 Experience</h2>
+        <h2>經歷 Experiences</h2>
         <p>(TBD)</p>
         <ul>
           <li><span><u>學術專長</u>：語言學、語意學、語用學、語言政策、田野調查、英語教學、社會語言學、應用語言學、地方創生與社會實踐（社區營造、跨領域整合與應用）</span></li>
@@ -642,7 +643,6 @@
 
     <div class="container">
       <div class="copyright text-center">
-        <p><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></p>
         <br><p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
