--- a/project-details.html
+++ b/project-details.html
@@ -95,10 +95,10 @@
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <h3><i class="bi bi-card-checklist"></i> 研究計畫 Research Projects</h3>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第二期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0】(2025-2027) | 教育部 (MOE-114-1-C-008)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>114年度教育部「人文社會與產業實務創新鏈結計畫」第二期計畫【從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0】(2025-2027) | 教育部 (MOE-114-1-C-008)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>113年度教育部教學實踐研究計畫【GIS故事地圖與中英翻譯課程之跨域應用】(2024-2025) | 教育部 (PED1137365)</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第一期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0】(2023-2025) | 教育部 (MOE-112-1-C-005)</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第零期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用】(2023) | 教育部 (MOE-112-C-022)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>112年度教育部「人文社會與產業實務創新鏈結計畫」第一期計畫【從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0】(2023-2025) | 教育部 (MOE-112-1-C-005)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>112年度教育部「人文社會與產業實務創新鏈結計畫」第零期計畫【從教室到社區：中英翻譯與GIS故事地圖之跨域應用】(2023) | 教育部 (MOE-112-C-022)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>科技部人文創新與社會實踐計畫【新竹智慧城鄉創生計畫：地方活力與能力建構】(2021) | 國立清華大學 (MOST 108-2420-H-007-010-HS1)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>科技部人文創新與社會實踐計畫【灣岸創生：高雄過渡社區的記憶再現與創新轉型】(2018-2020) | 國立中山大學 (MOST 107-2420-H-110-004-HS1)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>Grammaticalization Cycles of Nasal Diminutive Suffixes in Chinese【鼻化小稱語法化輪迴】(2015) | 國科會 (NSC102-2410-H-007-023-MY2)</span></li>
