Revise for overall content

--- a/index.html
+++ b/index.html
@@ -145,27 +145,60 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title"><i class="bi bi-bank"></i> Education</h3>
-            <div class="resume-item">
-              <h4>國立清華大學語言學研究所博士</h4>
-              <h6>Ph.D., Linguistics</h6>
-              <h6>National Tsing Hua University, Hsinchu City, Taiwan.</h6>
+            <h3 class="resume-title"><i class="bi bi-person-workspace"></i> Current Position</h3>
+            <div class="resume-item pb-0">
+              <h4>國立勤益科技大學應用英語系 | 助理教授</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Assistant Professor, Department of Applied English, National Chin-Yi University of Technology, Taichung, Taiwan.</em></p>
               <ul style="list-style-type: none;">
-                <li><i class="bi bi-file-earmark-medical"></i> [Dissertation] <em>A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</em></li>
-              </ul>
-            </div>
+                <li><i class="bi bi-briefcase"></i> 114年度教育部「人文社會與產業實務創新鏈結計畫」第二期計畫</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-114-1-C-008</li>
+                  </ul>
+                </li>
 
-            <div class="resume-item">
-              <h4>靜宜大學英國語文學系碩士</h4>
-              <h6>MA, English Language, Literature and Linguistics</h6>
-              <h6>Providence University, Taichung City, Taiwan.</h6>
-              <ul style="list-style-type: none;">
-                <li><i class="bi bi-file-earmark-medical"></i> [Thesis] <em>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</em></li>
+                <li><i class="bi bi-briefcase"></i> 113年度教育部教學實踐研究計畫</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> GIS故事地圖與中英翻譯課程之跨域應用</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：PED1137365</li>
+                  </ul>
+                </li>
+
+                <li><i class="bi bi-briefcase"></i> 112年度教育部「人文社會與產業實務創新鏈結計畫」第一期計畫</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-112-1-C-005</li>
+                  </ul>
+                </li>
+
+                <li><i class="bi bi-briefcase"></i> 112年度教育部「人文社會與產業實務創新鏈結計畫」第零期計畫</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-112-C-022</li>
+                  </ul>
+                </li>
+
+                <li><i class="bi bi-briefcase"></i> 英語補習教育實務人才培育計畫 - 計畫主持人</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 互動美語北屯分公司 [台中市私立希伯崙文股份有限公司]</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 佳音太平分校 [台中市私立喬伊美語短期補習班]</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 夏恩英語 [台中市私立琳達文理短期補習班]</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 琳達 [台中市私立琳達文理短期補習班]</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 新高穩瑩 [台中市私立獅子王文理短期補習班]</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 獅子王1 [台中市私立獅子王文理短期補習班]</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 獅子王2 [台中市私立獅子王文理短期補習班]</li>
+                  </ul>
+                </li>
               </ul>
             </div>
 
             <h3 class="resume-title"><i class="bi bi-globe-americas"></i> Oversea</h3>
-
             <div class="resume-item pb-0">
               <h4>美國夏威夷大學語言學系 | 訪問學人</h4>
               <h5>2013 - 2014</h5>
@@ -177,6 +210,24 @@
               </ul>
             </div>
 
+            <h3 class="resume-title"><i class="bi bi-bank"></i> Education</h3>
+            <div class="resume-item pb-0">
+              <h4>國立清華大學語言學研究所博士</h4>
+              <h6>Ph.D., Linguistics</h6>
+              <h6>National Tsing Hua University, Hsinchu City, Taiwan.</h6>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-file-earmark-medical"></i> [Dissertation] <em>A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</em></li>
+              </ul>
+              <h4>靜宜大學英國語文學系碩士</h4>
+              <h6>MA, English Language, Literature and Linguistics</h6>
+              <h6>Providence University, Taichung City, Taiwan.</h6>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-file-earmark-medical"></i> [Thesis] <em>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</em></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title"><i class="bi bi-award"></i> Academic Awards</h3>
             <div class="resume-item pb-0">
               <h4>國立勤益科技大學推動研究發展績效獎</h4>
@@ -219,7 +270,8 @@
               <h4>新型研發專利</h4>
               <h6>新型名稱：外語口說評分系統</h6>
               <ul style="list-style-type: none;">
-                <li><i class="bi bi-bookmark-star"></i> 專利編號：新型第 M657972 號、專利權期間：2024.07.11 - 2033.12.05</li>
+                <li><i class="bi bi-bookmark-star"></i> 專利編號：新型第 M657972 號</li>
+                <li><i class="bi bi-bookmark-star"></i> 專利權期間：2024.07.11 - 2033.12.05</li>
               </ul>
               <h4>中等學校英文科教師證書</h4>
               <ul style="list-style-type: none;">
@@ -232,109 +284,6 @@
             </div>
           </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title"><i class="bi bi-person-workspace"></i> Work</h3>
-            <div class="resume-item">
-              <h4>國立勤益科技大學應用英語系 | 助理教授</h4>
-              <h5>2022 - Present</h5>
-              <p><em>Assistant Professor, Department of Applied English, National Chin-Yi University of Technology, Taichung, Taiwan.</em></p>
-              <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> 113年度教育部教學實踐研究計畫</li>
-                <li>
-                  <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> GIS故事地圖與中英翻譯課程之跨域應用</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：PED1137365</li>
-                  </ul>
-                </li>
-
-                <li><i class="bi bi-briefcase"></i> 114年度教育部「人文社會與產業實務創新鏈結計畫」第二期計畫</li>
-                <li>
-                  <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-114-1-C-008</li>
-                  </ul>
-                </li>
-
-                <li><i class="bi bi-briefcase"></i> 112年度教育部「人文社會與產業實務創新鏈結計畫」第一期計畫</li>
-                <li>
-                  <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-112-1-C-005</li>
-                  </ul>
-                </li>
-
-                <li><i class="bi bi-briefcase"></i> 112年度教育部「人文社會與產業實務創新鏈結計畫」第零期計畫</li>
-                <li>
-                  <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOE-112-C-022</li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>國立彰化師範大學科學教育研究所 | 博士後研究員</h4>
-              <h5>2022 - 2022</h5>
-              <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
-              <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> (TBD)</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>國立清華大學區域創新中心 | 博士後研究員</h4>
-              <h5>2021 - 2021</h5>
-              <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
-              <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
-                <li>
-                  <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> 新竹智慧城鄉創生計畫：地方活力與能力建構</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOST 108-2420-H-007-010-HS1</li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>國立高雄科技大學外語教育中心 | 助理教授</h4>
-              <h5>2019 - 2021</h5>
-              <p><em>Assistant Professor, Foreign Language Enducation Center, National Kaohsiung University of Technology, Kaohsiung, Taiwan.</em></p>
-              <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> 授課課程：大學部英文</li>
-                <li><i class="bi bi-briefcase"></i> (TBD)</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>國立中山大學社會實踐與發展研究中心 | 博士後研究員</h4>
-              <h5>2018 - 2020</h5>
-              <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
-              <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
-                <li>
-                  <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> 灣岸創生：高雄過渡社區的記憶再現與創新轉型</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOST 107-2420-H-110-004-HS1</li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>國立新竹教育大學英語教學系 | 講師</h4>
-              <h5>2011 - 2013</h5>
-              <p><em>Lecturer, Department of English Instruction, National Hsinchu University of Education, Hsinchu, Taiwan.</em></p>
-              <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> Reading and Writing English</li>
-                <li><i class="bi bi-briefcase"></i> English Proficiency Development</li>
-                <li><i class="bi bi-briefcase"></i> Speech and Communication in English</li>
-                <li><i class="bi bi-briefcase"></i> Grammar and Writing English</li>
-                <li><i class="bi bi-briefcase"></i> Listening and Speaking in English</li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
 
@@ -396,7 +345,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
+              <h4 class="title"><a href="work-details.html" class="stretched-link">工作經歷</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
           </div>
