--- a/work-details.html
+++ b/work-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Teaching)</title>
+  <title>楊真宜 Chen-Yi Yang (Work)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -72,17 +72,17 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Teaching Details</h1>
+        <h1 class="mb-2 mb-lg-0">Work Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Teaching</li>
+            <li class="current">Works</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Teaching Details Section -->
+    <!-- Work Details Section -->
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
@@ -92,32 +92,75 @@
               <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
+
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3><i class="bi bi-chat-left-dots"></i> 教學經歷 Teaching Experiences</h3>
+            <h3><i class="bi bi-arrow-repeat"></i> 工作經歷 Work Experiences</h3>
             <hr>
+
+            <h4>國立彰化師範大學科學教育研究所 | 博士後研究員</h4>
+            <h5>2022 - 2022</h5>
+            <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
+            <ul style="list-style-type: none;">
+              <li><i class="bi bi-briefcase"></i> (TBD)</li>
+              <li>
+                <ul style="list-style-type: none;">
+                  <li><i class="bi bi-caret-right"></i> (TBD)</li>
+                </ul>
+              </li>
+            </ul>
+            <br>
+            <h4>國立清華大學區域創新中心 | 博士後研究員</h4>
+            <h5>2021 - 2021</h5>
+            <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
+            <ul style="list-style-type: none;">
+              <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
+              <li>
+                <ul style="list-style-type: none;">
+                  <li><i class="bi bi-caret-right"></i> 新竹智慧城鄉創生計畫：地方活力與能力建構</li>
+                  <li><i class="bi bi-caret-right"></i> 計畫編號：MOST 108-2420-H-007-010-HS1</li>
+                </ul>
+              </li>
+            </ul>
+            <br>
+            <h4>國立高雄科技大學外語教育中心 | 助理教授</h4>
+            <h5>2019 - 2021</h5>
+            <p><em>Assistant Professor, Foreign Language Enducation Center, National Kaohsiung University of Technology, Kaohsiung, Taiwan.</em></p>
+            <ul style="list-style-type: none;">
+              <li><i class="bi bi-briefcase"></i> 授課課程：大學部英文</li>
+              <li>
+                <ul style="list-style-type: none;">
+                  <li><i class="bi bi-caret-right"></i> (TBD)</li>
+                </ul>
+              </li>
+            </ul>
+            <br>
+            <h4>國立中山大學社會實踐與發展研究中心 | 博士後研究員</h4>
+            <h5>2018 - 2020</h5>
+            <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
+            <ul style="list-style-type: none;">
+              <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
+              <li>
+                <ul style="list-style-type: none;">
+                  <li><i class="bi bi-caret-right"></i> 灣岸創生：高雄過渡社區的記憶再現與創新轉型</li>
+                  <li><i class="bi bi-caret-right"></i> 計畫編號：MOST 107-2420-H-110-004-HS1</li>
+                </ul>
+              </li>
+            </ul>
+            <br>
+            <h4>國立新竹教育大學英語教學系 | 講師</h4>
+            <h5>2011 - 2013</h5>
+            <p><em>Lecturer, Department of English Instruction, National Hsinchu University of Education, Hsinchu, Taiwan.</em></p>
             <ul>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2015 Spring, TA]</b> Grammaticalization & Lexicalization, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> English Proficiency Development, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Speech and Communication in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Grammar and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, TA]</b> Introduction to Linguistics, Interdisciplinary Program of Humanities and Social Sciences, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Listening and Speaking in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, TA]</b> Discourse Analysis, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Spring, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Fall, TA]</b> Contrastive Analysis and Error Analysis, Graduate Institute of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Spring, TA]</b> Syntax, Department of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> English listening and speaking (Undergraduate), Providence University, Taiwan</span></li>
-              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> Linguistics, Department of English Language, Literature and Linguistics, Providence University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> Reading and Writing English</li>
+              <li><i class="bi bi-caret-right"></i> English Proficiency Development</li>
+              <li><i class="bi bi-caret-right"></i> Speech and Communication in English</li>
+              <li><i class="bi bi-caret-right"></i> Grammar and Writing English</li>
+              <li><i class="bi bi-caret-right"></i> Listening and Speaking in English</li>
             </ul>
         </div>
       </div>
 
-    </section><!-- /Teaching Details Section -->
+    </section><!-- /Work Details Section -->
 
   </main>
 
