--- a/cooperation-details.html
+++ b/cooperation-details.html
@@ -99,7 +99,7 @@
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(互動美語北屯分公司) | 計畫主持人 | 台中市私立希伯崙文股份有限公司 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(佳音太平分校) | 計畫主持人 | 台中市私立喬伊美語短期補習班 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(夏恩英語) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
-              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(琳達) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(芝麻街美語) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(新高穩瑩) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(獅子王1) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
               <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(獅子王2) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
