--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <h5>2022 - Present</h5>
               <p><em>Assistant Professor, Department of Applied English, National Chin-Yi University of Technology, Taichung, Taiwan.</em></p>
               <ul style="list-style-type: none;">
-                <li><i class="bi bi-briefcase"></i> 114年度教育部「人文社會與產業實務創新鏈結計畫」第二期計畫</li>
+                <li><i class="bi bi-briefcase"></i> <b>114年度教育部「人文社會與產業實務創新鏈結計畫」第二期計畫</b></li>
                 <li>
                   <ul style="list-style-type: none;">
                     <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用3.0</li>
@@ -159,7 +159,7 @@
                   </ul>
                 </li>
 
-                <li><i class="bi bi-briefcase"></i> 113年度教育部教學實踐研究計畫</li>
+                <li><i class="bi bi-briefcase"></i> <b>113年度教育部教學實踐研究計畫</b></li>
                 <li>
                   <ul style="list-style-type: none;">
                     <li><i class="bi bi-arrow-right-short"></i> GIS故事地圖與中英翻譯課程之跨域應用</li>
@@ -167,7 +167,7 @@
                   </ul>
                 </li>
 
-                <li><i class="bi bi-briefcase"></i> 112年度教育部「人文社會與產業實務創新鏈結計畫」第一期計畫</li>
+                <li><i class="bi bi-briefcase"></i> <b>112年度教育部「人文社會與產業實務創新鏈結計畫」第一期計畫</b></li>
                 <li>
                   <ul style="list-style-type: none;">
                     <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0</li>
@@ -175,7 +175,7 @@
                   </ul>
                 </li>
 
-                <li><i class="bi bi-briefcase"></i> 112年度教育部「人文社會與產業實務創新鏈結計畫」第零期計畫</li>
+                <li><i class="bi bi-briefcase"></i> <b>112年度教育部「人文社會與產業實務創新鏈結計畫」第零期計畫</b></li>
                 <li>
                   <ul style="list-style-type: none;">
                     <li><i class="bi bi-arrow-right-short"></i> 從教室到社區：中英翻譯與GIS故事地圖之跨域應用</li>
@@ -183,16 +183,16 @@
                   </ul>
                 </li>
 
-                <li><i class="bi bi-briefcase"></i> 英語補習教育實務人才培育計畫 - 計畫主持人</li>
-                <li>
+                <li><i class="bi bi-briefcase"></i> <b>產學合作計畫 - 計畫主持人</b></li>
                   <ul style="list-style-type: none;">
-                    <li><i class="bi bi-arrow-right-short"></i> 互動美語北屯分公司 [台中市私立希伯崙文股份有限公司]</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 佳音太平分校 [台中市私立喬伊美語短期補習班]</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 夏恩英語 [台中市私立琳達文理短期補習班]</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 琳達 [台中市私立琳達文理短期補習班]</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 新高穩瑩 [台中市私立獅子王文理短期補習班]</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 獅子王1 [台中市私立獅子王文理短期補習班]</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 獅子王2 [台中市私立獅子王文理短期補習班]</li>
+                    <li>英語補習教育實務人才培育計畫</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫1：互動美語北屯分公司 | 台中市私立希伯崙文股份有限公司</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫2：佳音太平分校 | 台中市私立喬伊美語短期補習班</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫3：夏恩英語 | 台中市私立琳達文理短期補習班</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫4：芝麻街美語 | 台中市私立琳達文理短期補習班</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫5：新高穩瑩 | 台中市私立獅子王文理短期補習班</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫6：獅子王1 | 台中市私立獅子王文理短期補習班</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫7：獅子王2 | 台中市私立獅子王文理短期補習班</li>
                   </ul>
                 </li>
               </ul>
