Revise for current positions (2)

--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
                 <li><i class="bi bi-briefcase"></i> <b>產學合作計畫 - 計畫主持人</b></li>
                   <ul style="list-style-type: none;">
                     <li>英語補習教育實務人才培育計畫</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫1：互動美語北屯分公司 | 台中市私立希伯崙文股份有限公司</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫2：佳音太平分校 | 台中市私立喬伊美語短期補習班</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫3：夏恩英語 | 台中市私立琳達文理短期補習班</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫4：芝麻街美語 | 台中市私立琳達文理短期補習班</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫5：新高穩瑩 | 台中市私立獅子王文理短期補習班</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫6：獅子王1 | 台中市私立獅子王文理短期補習班</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫7：獅子王2 | 台中市私立獅子王文理短期補習班</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫1： 台中市私立希伯崙文股份有限公司 | 互動美語北屯分公司</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫2： 台中市私立喬伊美語短期補習班 | 佳音太平分校</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫3： 台中市私立琳達文理短期補習班 | 夏恩英語</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫4： 台中市私立琳達文理短期補習班 | 芝麻街美語</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫5： 台中市私立獅子王文理短期補習班 | 新高穩瑩</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫6： 台中市私立獅子王文理短期補習班 | 獅子王1</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫7： 台中市私立獅子王文理短期補習班 | 獅子王2</li>
                   </ul>
                 </li>
               </ul>
