Fix typo for current position

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <li><i class="bi bi-briefcase"></i> <b>產學合作計畫 - 計畫主持人</b></li>
                   <ul style="list-style-type: none;">
                     <li>英語補習教育實務人才培育計畫</li>
-                    <li><i class="bi bi-arrow-right-short"></i> 計畫1： 台中市私立希伯崙文股份有限公司 | 互動美語北屯分公司</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫1： 台中市私立希伯崙股份有限公司 | 互動美語北屯分公司</li>
                     <li><i class="bi bi-arrow-right-short"></i> 計畫2： 台中市私立喬伊美語短期補習班 | 佳音太平分校</li>
                     <li><i class="bi bi-arrow-right-short"></i> 計畫3： 台中市私立琳達文理短期補習班 | 夏恩英語</li>
                     <li><i class="bi bi-arrow-right-short"></i> 計畫4： 台中市私立琳達文理短期補習班 | 芝麻街美語</li>
